// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`postcss > process case 0 1`] = `
"
@tailwind base;
@tailwind components;
@tailwind utilities;
      
      "
`;

exports[`postcss > process case 2 1`] = `
"@tailwind utilities;
@tailwind components"
`;

exports[`postcss > process case 3 1`] = `
"@tailwind base;
@tailwind components;
@tailwind utilities"
`;

exports[`postcss > process case 4 1`] = `
"@tailwind base;
@tailwind components;
@tailwind utilities"
`;

exports[`postcss > process case 5 1`] = `
"@tailwind utilities;
@tailwind components"
`;

exports[`postcss > process case 6 1`] = `
"@import 'xxx';
@use 'yyy';
@tailwind utilities;
@tailwind components;
"
`;

exports[`postcss > process case 7 1`] = `
"@import 'xxx';
@tailwind utilities;@use 'yyy';@tailwind components;
"
`;

exports[`postcss > process case 8 1`] = `
"@tailwind utilities;@import 'xxx';
@use 'yyy';
@tailwind components;
"
`;

exports[`postcss > process case 9 1`] = `
"/*  @import  xxx.less  */
@tailwind utilities;
@tailwind components"
`;

exports[`postcss > process case 10 1`] = `
"/*  @import  'xxx.less'  */
@tailwind utilities;
@tailwind components"
`;

exports[`postcss > process case 11 1`] = `
"/*  @import  'xxx.less'  */
@import 'xxx';
@tailwind utilities;
@tailwind components;"
`;

exports[`postcss > process case 12 1`] = `
"@import 'xxx';
/*  @import  'xxx.less'  */
@tailwind utilities;
@tailwind components;
"
`;
